# battle_city_otus

./: .gitignore  pyproject.toml
.github/workflows/: another.yml  validate.yml
patterns_otus_course_brailov/: actors.py  command.py  geometry.py  movement.py  tanks.py
patterns_otus_course_brailov/geometry/: angles.py  vectors.py
patterns_otus_course_brailov/movement/: commands.py  interfaces.py
tests/: test_actors.py  test_battle_city_otus.py  test_patterns_otus_course_brailov.py  test_tank_rectilinear_uniform_movement.py  test_tank_rotation.py
tests/movement/: test_tank_rectilinear_uniform_movement.py  test_tank_rotation.py
